# foam-agent

./: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  LIBFIVE_INTEGRATION.md  LICENSE  MULTIPHYSICS.md  Makefile  OPENEMS_GUIDE.md  OPENSIM_GUIDE.md  PHASE1_PROGRESS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  start.sh  verify.sh
docker/: .env  requirements.txt  supervisord.conf
docker/scripts/: start.sh
examples/templates/cavity/: README.md  blockMeshDict
python/: README.md  __init__.py  ai_prompts.py  cadquery_bridge.py  config.py  libfive_bridge.py  stl_converter.py
resources/: README.md
scripts/: README.md  build.sh  clean-macos.sh  dev.sh  logs.sh  run.sh  shell.sh  stop.sh
src/: ._casemanager.h  casemanager.cpp  casemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  meshwidget.cpp  meshwidget.h  processrunner.cpp  processrunner.h  solverwidget.cpp  solverwidget.h  visualizationwidget.cpp  visualizationwidget.h
ui/: mainwindow.ui
work/: .env.example
